--- a/assets/sass/sections/_gallery.scss
+++ b/assets/sass/sections/_gallery.scss
@@ -4,7 +4,7 @@ section {
   h2 {
   	font-weight: $font-weight-normal;
   	color: $blue-grey;
-  	margin-bottom: 80px;
+  	margin-bottom: 80px !important;
   	margin-top: 80px;
   }
 
